Tue Oct 22 03:09:48 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Note we now use doxygen 1.8.5 for 1.3.x snapshots and
	  releases.

Mon Oct 21 01:55:48 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Sync change from upstream: "Fix a harmless
	  compiler warning in lemon.c."  Generated code is identical, at least
	  on x86-64 Debian wheezy.

Mon Oct 21 01:52:12 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Sync change from upstream: "In the lemon parser
	  generator, change all hashes to unsigned to avoid potential problems
	  with signed integer overflow."  Generated code is identical, at
	  least on x86-64 Debian wheezy.

Sat Oct 19 06:38:48 GMT 2013  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Under cygwin, use cygwin_conv_path() if
	  using a new enough cygwin version, rather than the now deprecated
	  cygwin_conv_to_win32_path().  Reported by "Haroogan" on the
	  xapian-devel mailing list.

Sat Oct 19 00:36:06 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Simplify test for uuid_unparse_lower().  (see #626)

Sat Oct 19 00:21:37 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Split XAPIAN_LIBS out of XAPIAN_LDFLAGS.
	  (fixes#626)

Fri Oct 18 11:51:40 GMT 2013  Olly Betts <olly@survex.com>

	* geospatial/geoencode.cc: Use lround() instead of round(), since we
	  want the result as an int.  GCC 4.4.3 seems to optimise to use
	  lround() anyway, but other compilers may not.

Fri Oct 18 11:44:10 GMT 2013  Olly Betts <olly@survex.com>

	* geospatial/geoencode.cc: Include <math.h> for round() (fixes #628).

Tue Oct 15 03:16:04 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h,include/xapian/unicode.h: Mark internal
	  methods which are public for implementation convenience as
	  "@private" for doxygen where they weren't already.

Mon Oct 14 09:45:13 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian.h: Mark vinfo struct and get_vinfo_() function as