@@ -39,18 +39,29 @@ const Query Query::MatchAll((string()));
 const Query Query::MatchNothing;
 
 Query::Query(const string & term, Xapian::termcount wqf, Xapian::termpos pos)
-    : internal(new Xapian::Internal::QueryTerm(term, wqf, pos)) { }
+    : internal(new Xapian::Internal::QueryTerm(term, wqf, pos))
+{
+    LOGCALL_CTOR(API, "Query", term | wqf | pos);
+}
 
 Query::Query(Xapian::PostingSource * source)
-    : internal(new Xapian::Internal::QueryPostingSource(source)) { }
+    : internal(new Xapian::Internal::QueryPostingSource(source))
+{
+    LOGCALL_CTOR(API, "Query", source);
+}
 
-Query::Query(double factor, const Xapian::Query & subquery) {
+Query::Query(double factor, const Xapian::Query & subquery)
+{
+    LOGCALL_CTOR(API, "Query", factor | subquery);
+
     if (!subquery.empty())
 	internal = new Xapian::Internal::QueryScaleWeight(factor, subquery);
 }
 
 Query::Query(op op_, const Xapian::Query & subquery, double factor)
 {
+    LOGCALL_CTOR(API, "Query", op_ | subquery | factor);
+
     if (rare(op_ != OP_SCALE_WEIGHT))
 	throw Xapian::InvalidArgumentError("op must be OP_SCALE_WEIGHT");
     // If the subquery is MatchNothing then generate Query() which matches
@@ -61,6 +72,8 @@ Query::Query(op op_, const Xapian::Query & subquery, double factor)
 
 Query::Query(op op_, Xapian::valueno slot, const std::string & limit)
 {
+    LOGCALL_CTOR(API, "Query", op_ | slot | limit);
+
     if (op_ == OP_VALUE_GE) {
 	if (limit.empty())
 	    internal = MatchAll.internal;
@@ -76,6 +89,8 @@ Query::Query(op op_, Xapian::valueno slot, const std::string & limit)
 Query::Query(op op_, Xapian::valueno slot,
 	     const std::string & begin, const std::string & end)
 {
+    LOGCALL_CTOR(API, "Query", op_ | slot | begin | end);
+
     if (rare(op_ != OP_VALUE_RANGE))
 	throw Xapian::InvalidArgumentError("op must be OP_VALUE_RANGE");
     // If begin > end then generate Query() which matches nothing.
